#Implementação - Fase 1: Incluindo POST /api/auth/login.
